carlos.cirello/parser/y.output

state 0
	$accept: .top $end 

	FormToken  shift 3
	.  error

	top  goto 1
	questionaire  goto 2

state 1
	$accept:  top.$end 

	$end  accept
	.  error


state 2
	top:  questionaire.    (1)

	.  reduce 1 (src line 66)


state 3
	questionaire:  FormToken.TextToken '{' stack '}' 

	TextToken  shift 4
	.  error


state 4
	questionaire:  FormToken TextToken.'{' stack '}' 

	'{'  shift 5
	.  error


state 5
	questionaire:  FormToken TextToken '{'.stack '}' 
	stack: .    (3)

	.  reduce 3 (src line 80)

	stack  goto 6

state 6
	questionaire:  FormToken TextToken '{' stack.'}' 
	stack:  stack.question 
	stack:  stack.ifBlock 

	IfToken  shift 11
	QuotedStringToken  shift 10
	'}'  shift 7
	.  error

	question  goto 8
	ifBlock  goto 9

state 7
	questionaire:  FormToken TextToken '{' stack '}'.    (2)

	.  reduce 2 (src line 73)


state 8
	stack:  stack question.    (4)

	.  reduce 4 (src line 81)


state 9
	stack:  stack ifBlock.    (5)

	.  reduce 5 (src line 89)


state 10
	question:  QuotedStringToken.TextToken questionType 

	TextToken  shift 12
	.  error


state 11
	ifBlock:  IfToken.'(' andOrBlock ')' '{' stack '}' 
	ifBlock:  IfToken.'(' andOrBlock ')' '{' stack '}' ElseToken ifBlock 
	ifBlock:  IfToken.'(' andOrBlock ')' '{' stack '}' ElseToken '{' stack '}' 

	'('  shift 13
	.  error


state 12
	question:  QuotedStringToken TextToken.questionType 

	QuotedStringToken  shift 23
	TextToken  shift 22
	StringQuestionToken  shift 15
	NumericQuestionToken  shift 16
	BoolQuestionToken  shift 17
	ComputedQuestionToken  shift 18
	'('  shift 24
	NumericToken  shift 21
	.  error

	questionType  goto 14
	term  goto 19
	value  goto 20

state 13
	ifBlock:  IfToken '('.andOrBlock ')' '{' stack '}' 
	ifBlock:  IfToken '('.andOrBlock ')' '{' stack '}' ElseToken ifBlock 
	ifBlock:  IfToken '('.andOrBlock ')' '{' stack '}' ElseToken '{' stack '}' 

	QuotedStringToken  shift 23
	TextToken  shift 22
	'('  shift 24
	NumericToken  shift 21
	.  error

	term  goto 27
	andOrBlock  goto 25
	evaluatable  goto 26
	value  goto 20

state 14
	question:  QuotedStringToken TextToken questionType.    (6)

	.  reduce 6 (src line 99)


state 15
	questionType:  StringQuestionToken.    (7)

	.  reduce 7 (src line 108)


state 16
	questionType:  NumericQuestionToken.    (8)

	.  reduce 8 (src line 113)


state 17
	questionType:  BoolQuestionToken.    (9)

	.  reduce 9 (src line 117)


state 18
	questionType:  ComputedQuestionToken.'=' term 

	'='  shift 28
	.  error


state 19
	questionType:  term.    (11)
	term:  term.'+' term 
	term:  term.'-' term 
	term:  term.'*' term 
	term:  term.'/' term 

	'+'  shift 29
	'-'  shift 30
	'*'  shift 31
	'/'  shift 32
	.  reduce 11 (src line 125)


state 20
	term:  value.    (29)

	.  reduce 29 (src line 226)


state 21
	value:  NumericToken.    (30)

	.  reduce 30 (src line 233)


state 22
	value:  TextToken.    (31)

	.  reduce 31 (src line 247)


state 23
	value:  QuotedStringToken.    (32)

	.  reduce 32 (src line 258)


state 24
	value:  '('.andOrBlock ')' 

	QuotedStringToken  shift 23
	TextToken  shift 22
	'('  shift 24
	NumericToken  shift 21
	.  error

	term  goto 27
	andOrBlock  goto 33
	evaluatable  goto 26
	value  goto 20

state 25
	ifBlock:  IfToken '(' andOrBlock.')' '{' stack '}' 
	ifBlock:  IfToken '(' andOrBlock.')' '{' stack '}' ElseToken ifBlock 
	ifBlock:  IfToken '(' andOrBlock.')' '{' stack '}' ElseToken '{' stack '}' 

	')'  shift 34
	.  error


state 26
	andOrBlock:  evaluatable.BoolAndToken evaluatable 
	andOrBlock:  evaluatable.BoolOrToken evaluatable 
	andOrBlock:  evaluatable.    (17)

	BoolAndToken  shift 35
	BoolOrToken  shift 36
	.  reduce 17 (src line 178)


state 27
	evaluatable:  term.EqualsToToken term 
	evaluatable:  term.NotEqualsToToken term 
	evaluatable:  term.MoreThanToken term 
	evaluatable:  term.LessThanToken term 
	evaluatable:  term.MoreOrEqualsThanToken term 
	evaluatable:  term.LessOrEqualsThanToken term 
	evaluatable:  term.    (24)
	term:  term.'+' term 
	term:  term.'-' term 
	term:  term.'*' term 
	term:  term.'/' term 

	'+'  shift 29
	'-'  shift 30
	'*'  shift 31
	'/'  shift 32
	LessThanToken  shift 40
	LessOrEqualsThanToken  shift 42
	MoreThanToken  shift 39
	MoreOrEqualsThanToken  shift 41
	EqualsToToken  shift 37
	NotEqualsToToken  shift 38
	.  reduce 24 (src line 206)


state 28
	questionType:  ComputedQuestionToken '='.term 

	QuotedStringToken  shift 23
	TextToken  shift 22
	'('  shift 24
	NumericToken  shift 21
	.  error

	term  goto 43
	value  goto 20

state 29
	term:  term '+'.term 

	QuotedStringToken  shift 23
	TextToken  shift 22
	'('  shift 24
	NumericToken  shift 21
	.  error

	term  goto 44
	value  goto 20

state 30
	term:  term '-'.term 

	QuotedStringToken  shift 23
	TextToken  shift 22
	'('  shift 24
	NumericToken  shift 21
	.  error

	term  goto 45
	value  goto 20

state 31
	term:  term '*'.term 

	QuotedStringToken  shift 23
	TextToken  shift 22
	'('  shift 24
	NumericToken  shift 21
	.  error

	term  goto 46
	value  goto 20

state 32
	term:  term '/'.term 

	QuotedStringToken  shift 23
	TextToken  shift 22
	'('  shift 24
	NumericToken  shift 21
	.  error

	term  goto 47
	value  goto 20

state 33
	value:  '(' andOrBlock.')' 

	')'  shift 48
	.  error


state 34
	ifBlock:  IfToken '(' andOrBlock ')'.'{' stack '}' 
	ifBlock:  IfToken '(' andOrBlock ')'.'{' stack '}' ElseToken ifBlock 
	ifBlock:  IfToken '(' andOrBlock ')'.'{' stack '}' ElseToken '{' stack '}' 

	'{'  shift 49
	.  error


state 35
	andOrBlock:  evaluatable BoolAndToken.evaluatable 

	QuotedStringToken  shift 23
	TextToken  shift 22
	'('  shift 24
	NumericToken  shift 21
	.  error

	term  goto 27
	evaluatable  goto 50
	value  goto 20

state 36
	andOrBlock:  evaluatable BoolOrToken.evaluatable 

	QuotedStringToken  shift 23
	TextToken  shift 22
	'('  shift 24
	NumericToken  shift 21
	.  error

	term  goto 27
	evaluatable  goto 51
	value  goto 20

state 37
	evaluatable:  term EqualsToToken.term 

	QuotedStringToken  shift 23
	TextToken  shift 22
	'('  shift 24
	NumericToken  shift 21
	.  error

	term  goto 52
	value  goto 20

state 38
	evaluatable:  term NotEqualsToToken.term 

	QuotedStringToken  shift 23
	TextToken  shift 22
	'('  shift 24
	NumericToken  shift 21
	.  error

	term  goto 53
	value  goto 20

state 39
	evaluatable:  term MoreThanToken.term 

	QuotedStringToken  shift 23
	TextToken  shift 22
	'('  shift 24
	NumericToken  shift 21
	.  error

	term  goto 54
	value  goto 20

state 40
	evaluatable:  term LessThanToken.term 

	QuotedStringToken  shift 23
	TextToken  shift 22
	'('  shift 24
	NumericToken  shift 21
	.  error

	term  goto 55
	value  goto 20

state 41
	evaluatable:  term MoreOrEqualsThanToken.term 

	QuotedStringToken  shift 23
	TextToken  shift 22
	'('  shift 24
	NumericToken  shift 21
	.  error

	term  goto 56
	value  goto 20

state 42
	evaluatable:  term LessOrEqualsThanToken.term 

	QuotedStringToken  shift 23
	TextToken  shift 22
	'('  shift 24
	NumericToken  shift 21
	.  error

	term  goto 57
	value  goto 20

state 43
	questionType:  ComputedQuestionToken '=' term.    (10)
	term:  term.'+' term 
	term:  term.'-' term 
	term:  term.'*' term 
	term:  term.'/' term 

	'+'  shift 29
	'-'  shift 30
	'*'  shift 31
	'/'  shift 32
	.  reduce 10 (src line 121)


state 44
	term:  term.'+' term 
	term:  term '+' term.    (25)
	term:  term.'-' term 
	term:  term.'*' term 
	term:  term.'/' term 

	'*'  shift 31
	'/'  shift 32
	.  reduce 25 (src line 209)


state 45
	term:  term.'+' term 
	term:  term.'-' term 
	term:  term '-' term.    (26)
	term:  term.'*' term 
	term:  term.'/' term 

	'*'  shift 31
	'/'  shift 32
	.  reduce 26 (src line 214)


state 46
	term:  term.'+' term 
	term:  term.'-' term 
	term:  term.'*' term 
	term:  term '*' term.    (27)
	term:  term.'/' term 

	.  reduce 27 (src line 218)


state 47
	term:  term.'+' term 
	term:  term.'-' term 
	term:  term.'*' term 
	term:  term.'/' term 
	term:  term '/' term.    (28)

	.  reduce 28 (src line 222)


state 48
	value:  '(' andOrBlock ')'.    (33)

	.  reduce 33 (src line 269)


state 49
	ifBlock:  IfToken '(' andOrBlock ')' '{'.stack '}' 
	ifBlock:  IfToken '(' andOrBlock ')' '{'.stack '}' ElseToken ifBlock 
	ifBlock:  IfToken '(' andOrBlock ')' '{'.stack '}' ElseToken '{' stack '}' 
	stack: .    (3)

	.  reduce 3 (src line 80)

	stack  goto 58

state 50
	andOrBlock:  evaluatable BoolAndToken evaluatable.    (15)

	.  reduce 15 (src line 169)


state 51
	andOrBlock:  evaluatable BoolOrToken evaluatable.    (16)

	.  reduce 16 (src line 174)


state 52
	evaluatable:  term EqualsToToken term.    (18)
	term:  term.'+' term 
	term:  term.'-' term 
	term:  term.'*' term 
	term:  term.'/' term 

	'+'  shift 29
	'-'  shift 30
	'*'  shift 31
	'/'  shift 32
	.  reduce 18 (src line 181)


state 53
	evaluatable:  term NotEqualsToToken term.    (19)
	term:  term.'+' term 
	term:  term.'-' term 
	term:  term.'*' term 
	term:  term.'/' term 

	'+'  shift 29
	'-'  shift 30
	'*'  shift 31
	'/'  shift 32
	.  reduce 19 (src line 186)


state 54
	evaluatable:  term MoreThanToken term.    (20)
	term:  term.'+' term 
	term:  term.'-' term 
	term:  term.'*' term 
	term:  term.'/' term 

	'+'  shift 29
	'-'  shift 30
	'*'  shift 31
	'/'  shift 32
	.  reduce 20 (src line 190)


state 55
	evaluatable:  term LessThanToken term.    (21)
	term:  term.'+' term 
	term:  term.'-' term 
	term:  term.'*' term 
	term:  term.'/' term 

	'+'  shift 29
	'-'  shift 30
	'*'  shift 31
	'/'  shift 32
	.  reduce 21 (src line 194)


state 56
	evaluatable:  term MoreOrEqualsThanToken term.    (22)
	term:  term.'+' term 
	term:  term.'-' term 
	term:  term.'*' term 
	term:  term.'/' term 

	'+'  shift 29
	'-'  shift 30
	'*'  shift 31
	'/'  shift 32
	.  reduce 22 (src line 198)


state 57
	evaluatable:  term LessOrEqualsThanToken term.    (23)
	term:  term.'+' term 
	term:  term.'-' term 
	term:  term.'*' term 
	term:  term.'/' term 

	'+'  shift 29
	'-'  shift 30
	'*'  shift 31
	'/'  shift 32
	.  reduce 23 (src line 202)


state 58
	stack:  stack.question 
	stack:  stack.ifBlock 
	ifBlock:  IfToken '(' andOrBlock ')' '{' stack.'}' 
	ifBlock:  IfToken '(' andOrBlock ')' '{' stack.'}' ElseToken ifBlock 
	ifBlock:  IfToken '(' andOrBlock ')' '{' stack.'}' ElseToken '{' stack '}' 

	IfToken  shift 11
	QuotedStringToken  shift 10
	'}'  shift 59
	.  error

	question  goto 8
	ifBlock  goto 9

state 59
	ifBlock:  IfToken '(' andOrBlock ')' '{' stack '}'.    (12)
	ifBlock:  IfToken '(' andOrBlock ')' '{' stack '}'.ElseToken ifBlock 
	ifBlock:  IfToken '(' andOrBlock ')' '{' stack '}'.ElseToken '{' stack '}' 

	ElseToken  shift 60
	.  reduce 12 (src line 131)


state 60
	ifBlock:  IfToken '(' andOrBlock ')' '{' stack '}' ElseToken.ifBlock 
	ifBlock:  IfToken '(' andOrBlock ')' '{' stack '}' ElseToken.'{' stack '}' 

	IfToken  shift 11
	'{'  shift 62
	.  error

	ifBlock  goto 61

state 61
	ifBlock:  IfToken '(' andOrBlock ')' '{' stack '}' ElseToken ifBlock.    (13)

	.  reduce 13 (src line 141)


state 62
	ifBlock:  IfToken '(' andOrBlock ')' '{' stack '}' ElseToken '{'.stack '}' 
	stack: .    (3)

	.  reduce 3 (src line 80)

	stack  goto 63

state 63
	stack:  stack.question 
	stack:  stack.ifBlock 
	ifBlock:  IfToken '(' andOrBlock ')' '{' stack '}' ElseToken '{' stack.'}' 

	IfToken  shift 11
	QuotedStringToken  shift 10
	'}'  shift 64
	.  error

	question  goto 8
	ifBlock  goto 9

state 64
	ifBlock:  IfToken '(' andOrBlock ')' '{' stack '}' ElseToken '{' stack '}'.    (14)

	.  reduce 14 (src line 151)


34 terminals, 11 nonterminals
34 grammar rules, 65/2000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
60 working sets used
memory: parser 48/30000
0 extra closures
137 shift entries, 1 exceptions
28 goto entries
23 entries saved by goto default
Optimizer space used: output 79/30000
79 table entries, 0 zero
maximum spread: 34, maximum offset: 62
